@@ -15,13 +15,13 @@ not run its Makefile.PL or Build.PL.
 Hash: SHA1
 
 SHA1 6798596a1e30eb4a08ffbf727de59538b702b76f BUGS
-SHA1 4df9968795070c51f18ae7759fea39ebdbcb52fb ChangeLog
+SHA1 674551329481a83759aa4b7a1248c761a19d67a2 ChangeLog
 SHA1 4960f389aef4439b67344b77a8d603c5b80722b6 Changes
 SHA1 ed314eff2c5ff2f7f5f958fdbcd85fd87c4743f0 FAQ
 SHA1 57a07f875b471f028d742fef5620745fc6348411 MANIFEST
 SHA1 f0e701fd572faa811d725da59a5212ce62c5e606 MANIFEST.SKIP
-SHA1 0a46713924eaa3eb31da97a6e70e9c26b514430b META.yml
-SHA1 08a6a8a0843dc7c4358847665fdd252ea1b97a9c Makefile.PL
+SHA1 8473c5e8a9da7cdd05551928345904bb38e4bfb7 META.yml
+SHA1 b5dc06164d1ad39ff8e36d21c5b1514ba7ae5ca4 Makefile.PL
 SHA1 147d03a3b8569d9b44ecc7070df4560d30ec2bdb README
 SHA1 f093b725f196a2005c771735f0f873b7d267b9b3 Todo
 SHA1 d03ab2413b3afc0c7402c9f9f11e17d12b845c66 eg/Makefile
@@ -33,7 +33,7 @@ SHA1 c3f14c76f500bca71840d1e2a3e8eff6d961b337 eg/test_full_apc.pl
 SHA1 325e3662ef88617f059e9a3ec5ef89e9d58378e2 eg/thinnercache.pl
 SHA1 1a4059bf59ee4e815b29c79ceb94904035c96edc eg/trimtrees.pl
 SHA1 7ef53cde573c4a57edff4be9cbcd0afc64e481e6 eg/zgrep-all-diffs.pl
-SHA1 4ca492a0da66bd16c4d2fb773892a24ee367744b lib/Perl/Repository/APC.pm
+SHA1 7cb7d8a9783b70a4963127b67d8eb910c038f812 lib/Perl/Repository/APC.pm
 SHA1 e0f63e73c610705d4e22c904384aa2ef159997e9 lib/Perl/Repository/APC/BAP.pm
 SHA1 3bfa0ea3bb4201d890555efe4da8771e080648db lib/Perl/Repository/APC2SVN.pm
 SHA1 6cec782c519e49107df1a2428f37e6f00407300b scripts/apc-overview
@@ -53,7 +53,7 @@ SHA1 06349443eb22a27569727ddd48caa8b4a6b0aac2 t/trimtrees.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.6 (GNU/Linux)
 
-iD8DBQFHk0Nn7IA58KMXwV0RAvu6AKCInX/0bXA5M+FzgNydtSm+Aes1XQCdFWqi
-0Jd/HySo3OMijg4Gge2mfF8=
-=iJ87
+iD8DBQFHk7ec7IA58KMXwV0RAimOAJ90c916gATKN7qQ1fB74WbhuSpvdQCgkWnX
+KEKNi1tj1j57AGYw7UaLqRY=
+=1c2w
 -----END PGP SIGNATURE-----
